--- a/.github/examples/release.yml
+++ b/.github/examples/release.yml
@@ -4,9 +4,18 @@ on:
   workflow_dispatch:
 
 jobs:
-  build:
-    uses: ./.github/workflows/ci.yml@${{ github.ref_name }}
+  tests:
+    uses: ewoks-kit/.github/.github/workflows/python-tests.yml@main
+
+  checks:
+    uses: ewoks-kit/.github/.github/workflows/python-check.yml@main
+
+  docs:
+    uses: ewoks-kit/.github/.github/workflows/python-docs.yml@main
 
   publish:
     uses: ewoks-kit/.github/.github/workflows/python-publish.yml@main
-    needs: build
+    needs:
+      - tests
+      - lint
+      - docs
