--- a/.github/examples/ci.yml
+++ b/.github/examples/ci.yml
@@ -10,7 +10,7 @@ jobs:
   tests:
     uses: ewoks-kit/.github/.github/workflows/python-tests.yml@main
     with:
-      pytest-args: >
+      pytest-args: >-
         -v -ra
         -W error
         -W ignore::DeprecationWarning:silx.resources
