--- a/.github/examples/release.yml
+++ b/.github/examples/release.yml
@@ -4,18 +4,35 @@ on:
   workflow_dispatch:
 
 jobs:
-  tests:
-    uses: ewoks-kit/.github/.github/workflows/python-tests.yml@main
+  # Build Python package
+  build:
+    uses: ewoks-kit/.github/.github/workflows/python-build.yml@main
 
+  # Run tests
+  tests:
+    needs: build
+    uses: ewoks-kit/.github/.github/workflows/python-tests.yml@main
+    with:
+      os: ubuntu-latest
+      python-version: "3.12"
+
+  # Run lint/checks
   checks:
     uses: ewoks-kit/.github/.github/workflows/python-check.yml@main
+    with:
+      enable-ruff: "true"
 
+  # Build docs
   docs:
+    needs: build
     uses: ewoks-kit/.github/.github/workflows/python-docs.yml@main
+    with:
+      python-doc-version: "3.12"
 
+  # Publish package
   publish:
     uses: ewoks-kit/.github/.github/workflows/python-publish.yml@main
     needs:
       - tests
-      - lint
+      - checks
       - docs
