--- a/.github/workflows/python-docs.yml
+++ b/.github/workflows/python-docs.yml
@@ -10,22 +10,13 @@ on:
 
 jobs:
   docs:
-    name: Build Docs
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v4
-
-      - name: Set up Python ${{ inputs.python-doc-version }}
-        uses: actions/setup-python@v5
+      - uses: ewoks-kit/.github/actions/setup-python-package@main
         with:
           python-version: ${{ inputs.python-doc-version }}
-
-      - name: Upgrade pip
-        run: python -m pip install --upgrade pip
-
-      - name: Install documentation dependencies
-        run: pip install .[doc]
+          install-extras: "doc"
 
       - name: Build documentation
         run: sphinx-build ./doc ./html
