make publish reusable

--- a/.github/examples/release.yml
+++ b/.github/examples/release.yml
@@ -29,3 +29,7 @@ jobs:
       - tests
       - checks
       - docs
+    with:
+      twine-username: "__token__"
+      twine-password: ${{ secrets.PYPI_TOKEN }}
+      test-twine-password: ${{ secrets.TEST_PYPI_TOKEN }}
