--- a/.github/workflows/python-coverage.yml
+++ b/.github/workflows/python-coverage.yml
@@ -19,6 +19,26 @@ on:
         required: false
         type: string
         default: "-v -ra -W error"
+      jupyter-platform-dirs:
+        required: false
+        type: string
+        default: "1"
+      qt-qpa-platform:
+        required: false
+        type: string
+        default: "offscreen"
+      qt-api:
+        required: false
+        type: string
+        default: ""
+      qt-binding:
+        required: false
+        type: string
+        default: ""
+      display:
+        required: false
+        type: string
+        default: "0"
       codecov-flags:
         required: false
         type: string
@@ -36,6 +56,31 @@ jobs:
         with:
           python-version: ${{ inputs.python-version }}
           install-extras: ${{ inputs.install-extras }}
+
+      - name: Install Qt runtime libraries
+        if: startsWith(inputs.os, 'ubuntu') && (inputs.qt-api != '' || inputs.qt-binding != '')
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y libegl1
+
+      - name: Configure test environment
+        shell: bash
+        run: |
+          if [ -n "${{ inputs.jupyter-platform-dirs }}" ]; then
+            echo "JUPYTER_PLATFORM_DIRS=${{ inputs.jupyter-platform-dirs }}" >> "$GITHUB_ENV"
+          fi
+          if [ -n "${{ inputs.qt-qpa-platform }}" ]; then
+            echo "QT_QPA_PLATFORM=${{ inputs.qt-qpa-platform }}" >> "$GITHUB_ENV"
+          fi
+          if [ -n "${{ inputs.qt-api }}" ]; then
+            echo "QT_API=${{ inputs.qt-api }}" >> "$GITHUB_ENV"
+          fi
+          if [ -n "${{ inputs.display }}" ]; then
+            echo "DISPLAY=${{ inputs.display }}" >> "$GITHUB_ENV"
+          fi
+          if [ -n "${{ inputs.qt-binding }}" ]; then
+            echo "QT_BINDING=${{ inputs.qt-binding }}" >> "$GITHUB_ENV"
+          fi
 
       - name: Install coverage tooling
         run: pip install pytest-cov "coverage[toml]"
