move the coverage to python-tests and use secret token as the trigger

--- a/.github/workflows/python-tests.yml
+++ b/.github/workflows/python-tests.yml
@@ -15,6 +15,10 @@ on:
         required: false
         type: string
         default: "-v -ra -W error"
+      codecov-flags:
+        required: false
+        type: string
+        default: ""
       jupyter-platform-dirs:
         required: false
         type: string
@@ -35,6 +39,9 @@ on:
         required: false
         type: string
         default: "0"
+    secrets:
+      codecov_token:
+        required: false
 
 jobs:
   test:
@@ -79,5 +86,35 @@ jobs:
           DISTRO_NAME="${REPO_NAME//-/_}"
           echo "DISTRO_NAME=$DISTRO_NAME" >> "$GITHUB_ENV"
 
+      - name: Install coverage tooling
+        if: ${{ secrets.codecov_token != '' }}
+        run: pip install pytest-cov "coverage[toml]"
+
       - name: Run pytest
+        if: ${{ secrets.codecov_token == '' }}
         run: pytest ${{ inputs.pytest-args }} --pyargs "$DISTRO_NAME"
+
+      - name: Run pytest with coverage
+        if: ${{ secrets.codecov_token != '' }}
+        run: |
+          pytest ${{ inputs.pytest-args }} \
+            --cov="$DISTRO_NAME" \
+            --cov-report=term \
+            --cov-report=xml \
+            --pyargs "$DISTRO_NAME"
+
+      - name: Upload coverage artifact
+        if: ${{ secrets.codecov_token != '' }}
+        uses: actions/upload-artifact@v4
+        with:
+          name: coverage-xml
+          path: coverage.xml
+
+      - name: Upload coverage to Codecov
+        if: ${{ secrets.codecov_token != '' }}
+        uses: codecov/codecov-action@v5
+        with:
+          files: coverage.xml
+          flags: ${{ inputs.codecov-flags }}
+          token: ${{ secrets.codecov_token }}
+          fail_ci_if_error: false
