--- a/.github/workflows/python-tests.yml
+++ b/.github/workflows/python-tests.yml
@@ -15,6 +15,10 @@ on:
         required: false
         type: string
         default: "-v -ra -W error"
+      enable-coverage:
+        required: false
+        type: string
+        default: "false"
       codecov-flags:
         required: false
         type: string
@@ -87,15 +91,15 @@ jobs:
           echo "DISTRO_NAME=$DISTRO_NAME" >> "$GITHUB_ENV"
 
       - name: Install coverage tooling
-        if: ${{ secrets.codecov_token != '' }}
+        if: inputs.enable-coverage == 'true'
         run: pip install pytest-cov "coverage[toml]"
 
       - name: Run pytest
-        if: ${{ secrets.codecov_token == '' }}
+        if: inputs.enable-coverage != 'true'
         run: pytest ${{ inputs.pytest-args }} --pyargs "$DISTRO_NAME"
 
       - name: Run pytest with coverage
-        if: ${{ secrets.codecov_token != '' }}
+        if: inputs.enable-coverage == 'true'
         run: |
           pytest ${{ inputs.pytest-args }} \
             --cov="$DISTRO_NAME" \
@@ -104,14 +108,14 @@ jobs:
             --pyargs "$DISTRO_NAME"
 
       - name: Upload coverage artifact
-        if: ${{ secrets.codecov_token != '' }}
+        if: inputs.enable-coverage == 'true'
         uses: actions/upload-artifact@v4
         with:
           name: coverage-xml
           path: coverage.xml
 
       - name: Upload coverage to Codecov
-        if: ${{ secrets.codecov_token != '' }}
+        if: inputs.enable-coverage == 'true'
         uses: codecov/codecov-action@v5
         with:
           files: coverage.xml
