--- a/.github/examples/test.yml
+++ b/.github/examples/test.yml
@@ -25,6 +25,7 @@ jobs:
     #   pytest-args: ${{ matrix.pytest-args || '' }}
     #   enable-coverage: ${{ matrix.enable-coverage }}
     #   qt-api: PyQt6
+    #   codecov-flags: "unit" # "unit" is default, can be "integration", "frontend", "backend"
     # strategy:
     #   fail-fast: false
     #   matrix:
