--- a/.github/workflows/python-tests.yml
+++ b/.github/workflows/python-tests.yml
@@ -92,7 +92,7 @@ jobs:
 
       - name: Install requested Qt API package
         if: inputs.qt-api != ''
-        run: pip install --upgrade "${{ inputs.qt-api }}"
+        run: pip install "${{ inputs.qt-api }}"
 
       - name: Install coverage tooling
         if: inputs.enable-coverage == 'true'
